--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.21",
+    "@google/genai": "^1.7.0",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
