--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "langchain": "^0.3.29",
     "mongoose": "^8.16.0",
     "nodemon": "^3.1.10",
-    "puppeteer": "^24.10.2"
+    "puppeteer": "^24.10.2",
+    "replicate": "^1.0.1"
   }
 }
